css/kudu.css
.btn-info {
    background-color: #1f99d5;
    border-color: #0e76bc;
}

.btn-info :hover {
    background-color: #25aae1;
}

#toc.affix {
  top: 20px;
  margin-top: 0;
  width: 262.5px;
}

@media (max-width: 991px) {
  .affix {
    position: inherit;
  }
}

#toc {
    margin-top: 30px;
    padding: 10px;
    border: 1px solid #dddddd;
}

.row.header {
    border-bottom: 1px solid #25aae1;
    margin-bottom: 30px
}

.row.overview {
    margin-bottom: 30px;
    padding: 10px 0;
    border-bottom: 1px solid #ccccff;
    font-size: 120%;
}

.row.overview.noborder {
    border-bottom: none;
}

.row.overview h3 {
    margin-top: 0;
}

.row.overview img {
    display: block;
    margin: auto;
}

.kudu-site .navbar-default {
    background-color: #fff;
    border: none;
}

.kudu-site .navbar-default .navbar-nav a {
    font-size: 110%;
    background: none;
}

.kudu-site .navbar-default .navbar-nav a:hover {
    color: #fdfdfd;
    background: #1f99d5;
}

.kudu-site .navbar-default .navbar-nav .active a {
    color: #555;
    font-weight: bold;
    background: none;
}

.kudu-site .navbar-default .navbar-nav .active a:hover {
    cursor: default;
    color: #555;
}

.kudu-site .navbar-default:after {
    display: block;
    clear: both;
}

.faq #faq_toc {
    margin: 20px 0;
}

.faq dl dt {
    color: #333;
    font-size: 18px;
    font-weight: bold;
    padding: 20px 0 10px 0;
    border-top: 1px solid #dddddd;
}

.faq dl dd {
    padding: 0 0 20px 0;
    margin: 0;
}

.faq dl dd p {
    margin: 0 0 10px 0;
}

.faq dl dd p:last-child {
    margin: 0;
}

@media (min-width: 768px) { .container-fluid {
  width: 750px
} }
@media (min-width: 992px) { .container-fluid {
  width: 970px
} }

@media (min-width: 1200px) { .container-fluid {
  width: 1170px
} }

